# Mediapipe-MNN

./: CMakeLists.txt
3rdLibs/opencv2.xcframework/: Info.plist
3rdLibs/opencv2.xcframework/ios-arm64_x86_64-maccatalyst/opencv2.framework/Versions/A/Resources/: Info.plist
3rdLibs/opencv2.xcframework/macos-arm64_x86_64/opencv2.framework/Versions/A/Headers/: cvconfig.h
